<resources>
    <string name="facebook_app_id">123456908761030</string>
    <string name="app_name">Aistasker</string>
    <string name="introduction_screen_catch_phrase_title">Get more done</string>
    <string name="introduction_screen_catch_phrase_text">Bringing together over 1.3 million people who want to work with those who need work done.</string>
    <string name="introduction_screen_sign_up_button">Sign up</string>
    <string name="introduction_screen_login_button">Log in</string>
    <string name="create_profile_your_region_label">Select your region</string>
    <string name="sign_up_login_button_forgot_password">Forgot password</string>
    <string name="bottom_navigation_bar_post_task_label">Post a task</string>
    <string name="bottom_navigation_bar_my_tasks_label">My tasks</string>
    <string name="bottom_navigation_bar_browse_label">Browse</string>
    <string name="bottom_navigation_bar_messages_label">Messages</string>
    <string name="bottom_navigation_bar_more_label">More</string>
    <string name="sign_up_login_error_email">Please enter a valid email address</string>
    <string name="sign_up_login_error_password">A valid password is %1$s characters and above</string>
    <string name="sign_up_login_facebook_button_label_login">Log in with Facebook</string>
    <string name="sign_up_login_facebook_button_label_sign_up">Sign up with Facebook</string>
    <string name="sign_up_login_facebook_login_failed_message">Facebook login failed: %1$s</string>
    <string name="sign_up_login_hint_email">Email</string>
    <string name="sign_up_login_hint_password">Password</string>
    <string name="sign_up_login_main_button_label_login">Log in</string>
    <string name="sign_up_login_main_button_label_sign_up">Sign up</string>
    <string name="sign_up_login_message_password_reset_sent">Password reset request sent</string>
    <string name="sign_up_login_paragraph_terms_and_conditions">By clicking on \"Sign up\" you confirm that you accept the %1$s and %2$s</string>
    <string name="sign_up_login_progress_bar_message_creating_account">Creating account</string>
    <string name="sign_up_login_progress_bar_message_logging_in">Logging in</string>
    <string name="sign_up_login_progress_bar_message_resetting_password">Requesting password reset</string>
    <string name="sign_up_login_screen_title_login">Log in</string>
    <string name="sign_up_login_screen_title_sign_up">Sign up</string>
    <string name="sign_up_login_separator_or">or</string>
    <string name="suggestion_name_cleaning">cleaning</string>
    <string name="suggestion_name_coles">Coles shopping</string>
    <string name="suggestion_name_furniture">furniture</string>
    <string name="suggestion_name_garden">garden</string>
    <string name="suggestion_name_handyman">handyman</string>
    <string name="suggestion_name_it">it</string>
    <string name="suggestion_name_moving">moving</string>
    <string name="suggestion_name_office">office</string>
    <string name="suggestion_name_other">other</string>
    <string name="suggestion_name_photography">photography</string>
    <string name="suggestion_name_pickup">pickup</string>
    <string name="suggestion_example_cleaning">eg. Clean my 2 bedroom apartment</string>
    <string name="suggestion_example_furniture">eg. Install my new wardrobe</string>
    <string name="suggestion_example_garden">eg. General garden maintenance</string>
    <string name="suggestion_example_handyman">eg. Wall mount my television</string>
    <string name="suggestion_example_it">eg. Set up my new computer</string>
    <string name="suggestion_example_moving">eg. Help with moving my apartment</string>
    <string name="suggestion_example_office">eg. Need an assistant for the day</string>
    <string name="suggestion_example_other">What do you need done?</string>
    <string name="suggestion_example_photography">eg. Website photography</string>
    <string name="suggestion_example_pickup">eg. Deliver a small parcel</string>
    <string name="misc_empty_string"></string>
    <string name="suggestions_admin_label">Admin</string>
    <string name="suggestions_assembly_label">Assembly</string>
    <string name="suggestions_cleaning_label">Cleaning</string>
    <string name="suggestions_coles_label">Coles shopping</string>
    <string name="suggestions_delivery_label">Delivery</string>
    <string name="suggestions_gardening_label">Gardening</string>
    <string name="suggestions_handyman_label">Handyman</string>
    <string name="suggestions_it_label">Computer IT</string>
    <string name="suggestions_other_label">Anything else</string>
    <string name="suggestions_photography_label">Photography</string>
    <string name="suggestions_removalists_label">Removalists</string>
    <string name="suggestions_screen_title">Post a task</string>
    <string name="dashboard_screen_title">Dashboard</string>
    <string name="more_options_profile_label">Profile</string>
    <string name="more_options_payment_history_label">Payment history</string>
    <string name="more_options_payments">Payment methods</string>
    <string name="more_options_reviews_label">Reviews</string>
    <string name="more_options_notifications_label">Notifications</string>
    <string name="task_alerts_screen_title">Task alerts</string>
    <string name="more_options_settings_label">Settings</string>
    <string name="more_options_help_label">Help</string>
    <string name="more_options_referrals_label">Get Airtasker credit</string>
    <string name="more_options_logout_label">Logout</string>
    <string name="more_options_screen_title">More options</string>
    <string name="browse_tasks_empty_state_browse_tasks">We couldn\'t find any tasks that match - maybe try a different filter or search word?</string>
    <string name="browse_tasks_empty_state_change_filters">Change filters</string>
    <string name="country_prompt">Choose a country</string>
    <string-array name="country_arrays">
        <item>Australia</item>
        <item>United Kingdom</item>
    </string-array>
    <string name="browse_tasks_my_tasks_tab_label_all">All</string>
    <string name="browse_tasks_my_tasks_tab_label_assigned">Assigned</string>
    <string name="browse_tasks_my_tasks_tab_label_completed">Completed</string>
    <string name="browse_tasks_my_tasks_tab_label_draft">Draft</string>
    <string name="browse_tasks_my_tasks_tab_label_offered">Offered</string>
    <string name="browse_tasks_my_tasks_tab_label_posted">Posted</string>
    <string name="browse_tasks_screen_title">Browse tasks</string>
    <string name="browse_tasks_screen_title_my_tasks">My tasks</string>
    <string name="browse_tasks_empty_state_message">Oops it seems you don\'t have any tasks to display!</string>
    <string name="browse_tasks_chip_task_type_all">In person &amp; remotely</string>
    <string name="browse_tasks_chip_task_location">50km, sydney NSW...</string>
    <string name="browse_tasks_chip_task_price_any">Any price</string>
    <string name="post_task_segment_title_details">Details</string>
    <string name="post_task_segment_title_location">Due date</string>
    <string name="post_task_segment_title_price">Budget</string>
    <string name="post_task_details">Post task details</string>
    <string name="post_task_location">Post task location</string>
    <string name="post_task_price">Post task price</string>
    <string name="post_task_details_button_continue">Continue</string>
    <string name="post_task_details_task_location_label">Task location (%1$s)</string>
    <string name="post_task_details_can_be_completed_online_label">Can this task be completed online?</string>
    <string name="post_task_details_add_must_haves">Add must-haves</string>
    <string name="post_task_details_description_label">Describe your task</string>
    <string name="post_task_details_title_label">Task title</string>
    <string name="post_task_details_title_hint">e.g. Clean my 2 bedroom apartment</string>
    <string name="yes_no_radio_group_key_no">NO</string>
    <string name="yes_no_radio_group_key_yes">YES</string>
    <string name="yes_no_widget_yes_label">Yes</string>
    <string name="yes_no_widget_no_label">No</string>
    <string name="post_task_schedule_due_date_label">Due date</string>
    <string name="post_task_schedule_error_select_date">Please select a date</string>
    <string name="post_task_schedule_error_select_location">Please select a valid location</string>
    <string name="post_task_schedule_error_selected_date_pasted">Please select a date in the future</string>
    <string name="post_task_schedule_select_due_date">Select a date</string>
    <string name="messages_list_empty_state_message">You haven\'t got any messages yet - assign a task or get assigned to chat privately!</string>
    <string name="post_task_price_estimated_budget_label">Estimated budget:</string>
    <string name="post_task_price_hours_label">Hours</string>
    <string name="post_task_price_invalid_price_text">Total allowed price is %1$s - %2$s</string>
    <string name="post_task_price_invalid_rate_hours_missing_text">Please insert estimated hours!</string>
    <string name="post_task_price_per_tasker_label">per Tasker</string>
    <string name="post_task_price_price_label">What\'s your budget?</string>
    <string name="post_task_price_rate_label">Price per hour</string>
    <string name="post_task_price_state_label_hourly_rate">Hourly rate</string>
    <string name="post_task_price_state_label_total">Total</string>
    <string name="post_task_price_taskers_label">How many Taskers do you need?</string>
    <string name="private_conversation_messages_closed_message">Task completed. Private messages closed</string>
    <string name="list_item_private_conversation_time">Time</string>
    <string name="referrals_refer_friends_to_airtasker_label">Refer friends to Airtasker</string>
    <string name="referrals_more_information_label">More information</string>
    <string name="help_screen_title">Help</string>
    <string name="help_support_centre_label">Support centre</string>
    <string name="help_terms_and_conditions_label">Terms and conditions</string>
    <string name="layout_project_header_label">Project summary</string>
    <string name="project_layout_spots_left_label">Spots left</string>
    <string name="project_layout_assigned_label">Assigned</string>
    <string name="project_layout_offers_label">Offers</string>
    <string name="task_details_project_layout_finalise_project_button">Finalise project</string>
    <string name="add_mobile_number_allow_calls_switch_label">Allow calls for newly posted tasks</string>
    <string name="add_mobile_number_allow_calls_switch_message">We never display your number. \nCalls are connected via Airtasker and you will receive calls directly to your mobile. \n\nCalling from Airtasker while not on WIFI, will use your data plan and may incur charges</string>
    <string name="add_mobile_number_button_remove">Remove</string>
    <string name="add_mobile_number_button_send_verification_code">Send verification code</string>
    <string name="add_mobile_number_button_update">Update</string>
    <string name="add_mobile_number_mobile_number_label">Mobile number</string>
    <string name="browse_tasks_search_menu_item">Search</string>
    <string name="browse_tasks_toggle_mode_menu_item">Toggle</string>
    <string name="browse_tasks_filter_menu_item">Filters</string>
    <string name="task_details_menu_item_share_task">Share task</string>
    <string name="menu_item_call">Call</string>
    <string name="task_details_menu_edit_item">Edit</string>
    <string name="task_details_menu_item_add_to_calendar">Add to calendar</string>
    <string name="task_details_menu_item_cancel_task">Cancel task</string>
    <string name="task_details_menu_item_copy">Copy</string>
    <string name="task_details_menu_item_report">Report</string>
    <string name="task_details_menu_item_view_receipt">View receipt</string>
</resources>