<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/airtasker_application_background"
    android:orientation="vertical"
    android:padding="@dimen/large">

    <TextView
        android:id="@+id/mobile_verification_calls_text_view_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lines="1"
        android:text="@string/add_mobile_number_mobile_number_label"
        android:textColor="@color/grey4" />

    <EditText
        android:id="@+id/mobile_verification_calls_edit_text_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium"
        android:imeOptions="actionGo|actionSearch|actionSend|actionNext|actionDone|actionPrevious"
        android:inputType="number|numberSigned|numberDecimal|numberPassword|phone" />

    <Button
        android:id="@+id/mobile_verification_calls_button_verification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="@dimen/large"
        android:background="@drawable/rounded_button_normal"
        android:text="@string/add_mobile_number_button_send_verification_code" />

    <LinearLayout
        android:id="@+id/mobile_verification_calls_layout_remove_update_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large"
        android:orientation="horizontal">

        <Button
            android:id="@+id/mobile_verification_calls_button_remove"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/medium"
            android:layout_marginRight="@dimen/medium"
            android:layout_weight="1.0"
            android:background="@drawable/rounded_button_normal"
            android:text="@string/add_mobile_number_button_remove" />

        <Button
            android:id="@+id/mobile_verification_calls_button_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/medium"
            android:layout_marginStart="@dimen/medium"
            android:layout_weight="1.0"
            android:background="@drawable/rounded_button_normal"
            android:text="@string/add_mobile_number_button_update" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/mobile_verification_calls_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Switch
            android:id="@+id/mobile_verification_calls_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_mobile_number_allow_calls_switch_label" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small"
            android:text="@string/add_mobile_number_allow_calls_switch_message"
            android:textColor="@color/grey4" />
    </LinearLayout>
</LinearLayout>
